Fix for CodeDebugger.tsx layout issues

--- a/configurator/frontend/main/src/ui/components/CodeDebugger/CodeDebugger.module.less
+++ b/configurator/frontend/main/src/ui/components/CodeDebugger/CodeDebugger.module.less
@@ -4,6 +4,10 @@
   background-color: @primary-background !important;
 }
 
+:global .ant-tabs-content-holder {
+  overflow: auto;
+}
+
 .field {
   @apply flex flex-col h-full;
   @apply border-0 mb-0 !important;
